{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 52,
  "lineage": "e1971fed-c16c-aac6-3610-e0b22f28537d",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:425342967151:loadbalancer/app/Ameera-alb/07ff43abc0171990",
            "arn_suffix": "app/Ameera-alb/07ff43abc0171990",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Ameera-alb-1997671305.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:425342967151:loadbalancer/app/Ameera-alb/07ff43abc0171990",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Ameera-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c38aa1b4b7cb805d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c522d7d7cb6ef377"
              },
              {
                "subnet_id": "subnet-0e8bc3dae36baac75"
              }
            ],
            "subnets": [
              "subnet-0c522d7d7cb6ef377",
              "subnet-0e8bc3dae36baac75"
            ],
            "tags": {
              "Name": "Ameera-alb"
            },
            "tags_all": {
              "Name": "Ameera-alb"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:425342967151:listener/app/Ameera-alb/07ff43abc0171990/6e73ae5f7a6bfc05",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:425342967151:targetgroup/Ameera-tg/59e028bbe76dd3bd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:425342967151:listener/app/Ameera-alb/07ff43abc0171990/6e73ae5f7a6bfc05",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:425342967151:loadbalancer/app/Ameera-alb/07ff43abc0171990",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.front_end",
            "module.sg.aws_security_group.alb-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:425342967151:targetgroup/Ameera-tg/59e028bbe76dd3bd",
            "arn_suffix": "targetgroup/Ameera-tg/59e028bbe76dd3bd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:425342967151:targetgroup/Ameera-tg/59e028bbe76dd3bd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Ameera-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:425342967151:instance/i-06ee375d4c8cc1e28",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ee375d4c8cc1e28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c95e4dbafa23cc86",
            "private_dns": "ip-192-168-21-133.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.21.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db9bf69b04b1fb19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02692cf970da13c45",
            "tags": {
              "Name": "Ameera-database-server"
            },
            "tags_all": {
              "Name": "Ameera-database-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02f04dd8175c75ba6"
            ]
          },
          "dependencies": [
            "data.template_file.db_userdata",
            "module.sg.aws_security_group.db-sg",
            "module.vpc.aws_subnet.db"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04823729c75214919",
            "arn": "arn:aws:ec2:us-east-1:425342967151:instance/i-0696bab213de48476",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0696bab213de48476",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0390b934f37c844f4",
            "private_dns": "ip-192-168-16-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.16.109",
            "public_ip": "44.197.215.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a415e43695d17637",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c522d7d7cb6ef377",
            "tags": {
              "Name": "Ameera-jump-server"
            },
            "tags_all": {
              "Name": "Ameera-jump-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d282cd4ed79a959"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.js-sg",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:security-group/sg-0c38aa1b4b7cb805d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c38aa1b4b7cb805d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Ameera-alb-sg",
            "name_prefix": "",
            "owner_id": "425342967151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ameera-alb-sg"
            },
            "tags_all": {
              "Name": "Ameera-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:security-group/sg-0367a77b1cf7c2383",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0367a77b1cf7c2383",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c38aa1b4b7cb805d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Jump Server",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01d282cd4ed79a959"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ameera-app-sg",
            "name_prefix": "",
            "owner_id": "425342967151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ameera-app-sg"
            },
            "tags_all": {
              "Name": "Ameera-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb-sg",
            "module.sg.aws_security_group.js-sg",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:security-group/sg-02f04dd8175c75ba6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f04dd8175c75ba6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow APP",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0367a77b1cf7c2383"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Ameera-db-sg",
            "name_prefix": "",
            "owner_id": "425342967151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ameera-db-sg"
            },
            "tags_all": {
              "Name": "Ameera-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.alb-sg",
            "module.sg.aws_security_group.app-sg",
            "module.sg.aws_security_group.js-sg",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "js-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:security-group/sg-01d282cd4ed79a959",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d282cd4ed79a959",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ameera-jump-server-sg",
            "name_prefix": "",
            "owner_id": "425342967151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ameera-jump-server-sg"
            },
            "tags_all": {
              "Name": "Ameera-jump-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0079aea12a8464174",
            "association_id": "eipassoc-09f677ca8e047b874",
            "domain": "vpc",
            "id": "eipalloc-0079aea12a8464174",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e963c784bc0062d0",
            "private_dns": "ip-192-168-16-242.ec2.internal",
            "private_ip": "192.168.16.242",
            "public_dns": "ec2-34-196-48-141.compute-1.amazonaws.com",
            "public_ip": "34.196.48.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Ameera-nat-eip"
            },
            "tags_all": {
              "Name": "Ameera-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:internet-gateway/igw-06cbb35cd0480d265",
            "id": "igw-06cbb35cd0480d265",
            "owner_id": "425342967151",
            "tags": {
              "Name": "Ameera-internet-gateway"
            },
            "tags_all": {
              "Name": "Ameera-internet-gateway"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0079aea12a8464174",
            "association_id": "eipassoc-09f677ca8e047b874",
            "connectivity_type": "public",
            "id": "nat-09899d0cfdad47984",
            "network_interface_id": "eni-0e963c784bc0062d0",
            "private_ip": "192.168.16.242",
            "public_ip": "34.196.48.141",
            "subnet_id": "subnet-0c522d7d7cb6ef377",
            "tags": {
              "Name": "Ameera-nat-gw"
            },
            "tags_all": {
              "Name": "Ameera-nat-gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:route-table/rtb-0bfd46b03ee1487c0",
            "id": "rtb-0bfd46b03ee1487c0",
            "owner_id": "425342967151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09899d0cfdad47984",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ameera-private-route-table"
            },
            "tags_all": {
              "Name": "Ameera-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:route-table/rtb-06703bb0253c99daa",
            "id": "rtb-06703bb0253c99daa",
            "owner_id": "425342967151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cbb35cd0480d265",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ameera-public-route-table"
            },
            "tags_all": {
              "Name": "Ameera-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec5601c71542fc9f",
            "route_table_id": "rtb-0bfd46b03ee1487c0",
            "subnet_id": "subnet-02692cf970da13c45"
          },
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.db",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e16f627127ed1a8a",
            "route_table_id": "rtb-0bfd46b03ee1487c0",
            "subnet_id": "subnet-0bb8ad75cf3c7ca41"
          },
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014117d7c1e2f9b12",
            "route_table_id": "rtb-0bfd46b03ee1487c0",
            "subnet_id": "subnet-0254e67de48b5c8fd"
          },
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09527800954fdf809",
            "route_table_id": "rtb-0bfd46b03ee1487c0",
            "subnet_id": "subnet-0344e12c3ed773d3d"
          },
          "dependencies": [
            "module.vpc.aws_eip.gw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf274832268f1bbb",
            "route_table_id": "rtb-06703bb0253c99daa",
            "subnet_id": "subnet-0c522d7d7cb6ef377"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061928afae9cd7e7b",
            "route_table_id": "rtb-06703bb0253c99daa",
            "subnet_id": "subnet-0e8bc3dae36baac75"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:subnet/subnet-02692cf970da13c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02692cf970da13c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425342967151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ameera-db-subnet-1"
            },
            "tags_all": {
              "Name": "Ameera-db-subnet-1"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:subnet/subnet-0bb8ad75cf3c7ca41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.18.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb8ad75cf3c7ca41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425342967151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ameera-private-subnet-1"
            },
            "tags_all": {
              "Name": "Ameera-private-subnet-1"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:subnet/subnet-0254e67de48b5c8fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.19.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0254e67de48b5c8fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425342967151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ameera-private-subnet-2"
            },
            "tags_all": {
              "Name": "Ameera-private-subnet-2"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:subnet/subnet-0344e12c3ed773d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0344e12c3ed773d3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425342967151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ameera-private-subnet-3"
            },
            "tags_all": {
              "Name": "Ameera-private-subnet-3"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:subnet/subnet-0c522d7d7cb6ef377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c522d7d7cb6ef377",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "425342967151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ameera-public-subnet-1"
            },
            "tags_all": {
              "Name": "Ameera-public-subnet-1"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:subnet/subnet-0e8bc3dae36baac75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.17.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8bc3dae36baac75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "425342967151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ameera-public-subnet-2"
            },
            "tags_all": {
              "Name": "Ameera-public-subnet-2"
            },
            "vpc_id": "vpc-0cec55ca82d4812f3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425342967151:vpc/vpc-0cec55ca82d4812f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.16.0/20",
            "default_network_acl_id": "acl-0ba1b4b97231e9329",
            "default_route_table_id": "rtb-09be78a5a233bb5c2",
            "default_security_group_id": "sg-04882640dc7346fb5",
            "dhcp_options_id": "dopt-02f53a82fabd21285",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cec55ca82d4812f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09be78a5a233bb5c2",
            "owner_id": "425342967151",
            "tags": {
              "Name": "Ameera-vpc"
            },
            "tags_all": {
              "Name": "Ameera-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}